# intervals-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  install.sh  intervals_sync.py  main.py  pyproject.toml  secrets.json.example  state.py  weather.py
.github/: dependabot.yml
.github/workflows/: ci.yml
src/intervals_sync/: api.py  config.py  formatters.py  load_metrics.py  notes.py  state.py  sync.py  units.py  weather.py
tests/: test_api.py  test_config.py  test_formatters.py  test_load_metrics.py  test_notes.py  test_units.py
