[project]
name = "intervals-sync"
version = "0.1.0"
description = "Sync intervals.icu activities to Obsidian markdown notes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
intervals-sync = "intervals_sync.sync:sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intervals_sync"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pre-commit>=4.2.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]
