[project]
name = "intervals-sync"
version = "0.1.0"
description = "Sync intervals.icu activities to Obsidian markdown notes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michał Domarus" }]
keywords = ["intervals.icu", "obsidian", "training", "cycling", "running", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mdomarus/intervals-sync"
Repository = "https://github.com/mdomarus/intervals-sync"
Issues = "https://github.com/mdomarus/intervals-sync/issues"

[project.scripts]
intervals-sync = "intervals_sync.sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intervals_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Line length is enforced by the formatter, which leaves unbreakable strings
# (long f-string table rows, URLs) intact; E501 would flag those unfixably.
ignore = ["E501"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]
